Added create bet
